fix nav menu panel height breaking on small desktop screens

--- a/common/common.scss
+++ b/common/common.scss
@@ -897,14 +897,6 @@ a:hover {
 }
 
 /****************************
-* Mobile Nav Menu Panels
- **************************/
-.menu-panel {
-  height: 100% !important;
-  transition: all 0.35s ease-in-out;
-}
-
-/****************************
 * Mobile Navigation icons
  **************************/
 .d-header-icons {
