--- a/desktop/desktop.scss
+++ b/desktop/desktop.scss
@@ -646,7 +646,7 @@ body {
 }
 
 .menu-panel {
-  height: unset !important;
+  //height: unset !important;
 }
 .d-header {
   position: static;
